--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="hu">
 <head>
     <!-- e szerint a videó szerint csináltam: https://www.youtube.com/watch?v=WZNG8UomjSI -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Időjárás tőlem</title>
